--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import @angular/material/prebuilt-themes/pink-bluegrey.css
+
+*
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+  font-family: 'Roboto', sans-serif
+
+p
+  margin: 0 !important
+  padding: 0 !important
+
+a
+  text-decoration: none
+  transition: 0.4px
